@@ -1,12 +1,12 @@
 {
-  "timestamp" : "2025-05-07T02:04:38Z",
-  "count_outdated" : 263,
-  "uniques_outdated" : 229,
-  "count" : 264,
-  "uniques" : 230,
+  "timestamp" : "2025-06-07T02:05:59Z",
+  "count_outdated" : 264,
+  "uniques_outdated" : 230,
+  "count" : 265,
+  "uniques" : 231,
   "clones" : [
     {
-      "timestamp": "2025-04-27T00:00:00Z",
+      "timestamp": "2025-06-06T00:00:00Z",
       "count": 1,
       "count_minmax": [ 1, 1 ],
       "count_decinc": [ 0, 1 ],
